--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
-body, .App {
-    height: 100vh;
-    display: grid;
-    background: #000;
+body,
+.App {
+  height: 100vh;
+  display: grid;
+  /* background: #000; */
 }
-iframe { margin: auto; }
+iframe {
+  margin: auto;
+}
